# health-manager

./: .gitignore  README.md  db_local.db  pyproject.toml  run_memray.sh  run_server.sh  run_ut.sh
docs/: fast_api_concepts.md  planV1.md  profiling.md
docs/v1/: db_plan_v1.md  endpoints_v1.md  plan_v1.md  rest_server_v1.md
health-manager/: main.py  server.py
health_manager/: __init__.py  config.py  database.py  dependencies.py  log.py  main.py  schemas.py  server.py  utils.py
health_manager/user/: exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py  utils.py
tests/: data.py  test_data.py  test_routes.py  test_user_service.py
